--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,7 @@ jobs:
       - checkout
       - restore_cache:
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
+          #lol
 #     Uncomment the following run block, if permissions for gradlew fail on CircleCI:
 #      - run:
 #         name: Chmod permissions
